RESOLVED FIXED204299
Return value of CSSPropertyAnimation::blendProperties() isn't used anywhere
https://bugs.webkit.org/show_bug.cgi?id=204299
Summary Return value of CSSPropertyAnimation::blendProperties() isn't used anywhere
Antoine Quint
Reported 2019-11-18 09:36:12 PST
Return value of CSSPropertyAnimation::blendProperties() isn't used anywhere
Attachments
Patch (5.55 KB, patch)
2019-11-18 09:37 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-11-18 09:37:34 PST
WebKit Commit Bot
Comment 2 2019-11-18 11:32:33 PST
Comment on attachment 383754 [details] Patch Clearing flags on attachment: 383754 Committed r252554: <https://trac.webkit.org/changeset/252554>
WebKit Commit Bot
Comment 3 2019-11-18 11:32:34 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-18 11:33:17 PST
Note You need to log in before you can comment on or make changes to this bug.