Return value of CSSPropertyAnimation::blendProperties() isn't used anywhere https://bugs.webkit.org/show_bug.cgi?id=204299

Patch by Antoine Quint <graouts@apple.com> on 2019-11-18
Reviewed by Dean Jackson.

There is no code calling CSSPropertyAnimation::blendProperties() that uses its returen value, so we change
that function to return void. Also, since this function contains the only call site to
CSSPropertyBlendingClient::isAccelerated(), we delete that function too.

* animation/CSSPropertyBlendingClient.h:
* animation/KeyframeEffect.h:
(WebCore::KeyframeEffect::isAccelerated const):
* page/animation/AnimationBase.h:
(WebCore::AnimationBase::isAccelerated const):
* page/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimation::blendProperties):
* page/animation/CSSPropertyAnimation.h:

Canonical link: https://commits.webkit.org/217587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252554 268f45cc-cd09-0410-ab3c-d52691b4dbfc