Source/WebCore/animation/CSSPropertyBlendingClient.h
@@ -35,7 +35,6 @@ public:
 
     virtual RenderElement* renderer() const = 0;
     virtual const RenderStyle& currentStyle() const = 0;
-    virtual bool isAccelerated() const = 0;
     virtual bool filterFunctionListsMatch() const = 0;
     virtual bool transformFunctionListsMatch() const = 0;
 #if ENABLE(FILTERS_LEVEL_2)
